# EmberSpark

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  pyproject.toml
deploy/: README.md
deploy/docker/: spark.yaml
deploy/firecracker/: README.md  spark.yaml
docs/: deployment.md  error-codes.md  forensic.md  learning-and-skills.md  logging-and-tracing.md  persona-manager.md  plugin-authoring.md  plugin-config.md  scheduling.md  security-posture.md  tools-and-permissions.md  web-ui.md  wiki-sync.md
examples/agents/: local-ollama.yaml  research-assistant.yaml
examples/tasks/: weekly-digest.yaml
examples/templates/code-reviewer/: README.md  agent.yaml  plugin-config.hints.json  task.yaml
examples/templates/daily-digest/: README.md  agent.yaml  plugin-config.hints.json  task.yaml
examples/templates/fact-checker/: README.md  agent.yaml  plugin-config.hints.json  task.yaml
examples/templates/inbox-processor/: README.md  agent.yaml  plugin-config.hints.json  task.yaml
examples/templates/research-assistant/: README.md  agent.yaml  plugin-config.hints.json  task.yaml
scripts/: sync-wiki.sh
spark/: __init__.py
spark/cli/: doctor.py  main.py
spark/config/: enums.py  loader.py  models.py  runtime_config.py  validator.py
spark/cost/: __init__.py  per_call.py  pricing.py  tracker.py
spark/daemon/: __init__.py  docker_mode.py  firecracker_mode.py  install.py  naked.py
spark/daemon/docker/: Dockerfile  docker-compose.yml  entrypoint.sh  hf_prefetch.py
spark/daemon/firecracker/: build-rootfs.sh  launcher.sh  vmconfig.template.json
spark/errors/: __init__.py  codes.py  notify.py  remediation.py
spark/forensic/: __init__.py  reader.py  retention.py  schemas.py  writer.py
spark/learning/: __init__.py  bandit.py  fingerprint.py  playbooks.py  reflection_plus.py
spark/logging/: __init__.py  events.py  processors.py  redaction_stats.py  retention.py  writer.py
spark/memory/: _chroma_hardening.py  bm25.py  consensus.py  consolidation.py  embeddings.py  lifecycle.py  long_term.py  promotion.py  pruning.py  pruning_runner.py  retrieval.py  session_memory.py  synthesis.py  task_memory.py
spark/notifications/: __init__.py  deliverables_watcher.py  grants_watcher.py  kinds.py  service.py
spark/persistence/: db.py  learning_models.py  learning_repos.py  models.py  repositories.py  types.py
spark/plugins/: _http_base.py  base.py  config.py  registry.py  tool_runtime.py
spark/plugins/builtins/: calendar.py  cloud_drive.py  csv_io.py  datetime_tool.py  email_sender.py  filesystem.py  git.py  home_assistant.py  http_client.py  http_tool.py  image_gen.py  imap_reader.py  json_query.py  maps.py  markdown_writer.py  pdf_reader.py  propose_skill.py  rss_reader.py  shell.py  slack.py  sqlite.py  telegram_messenger.py  weather.py  web_search.py  webhook.py  wikipedia.py
spark/privacy/: classifiers.py  cli_patterns.py  detector_catalog.py  filtering.py  guardrails.py  mask.py  redaction.py  sensitivity.py
spark/providers/: __init__.py  factory.py  openrouter_enrich.py  stub.py
spark/reflection/: reflector.py  schemas.py
spark/runtime/: __init__.py  bootstrap.py  engine.py  graph.py  lifecycle.py  spans.py  state.py  tool_spec.py
spark/sandbox/: executor.py  ipc.py  policy.py  worker.py
spark/sandbox/backends/: base.py  bubblewrap.py  nsjail.py  seatbelt.py
spark/scheduler/: __init__.py  backoff.py  executor.py  recovery.py  scheduler.py  simulate.py  triggers.py
spark/scheduler/events/: __init__.py  file_changed.py  http_new_row.py  telegram_bot.py  telegram_message.py
spark/secrets/: __init__.py  age_vault.py  base.py  env_backend.py  manager.py
spark/skills/: __init__.py  catalog.py  discovery.py  schemas.py  sources.py
spark/templates/: __init__.py  loader.py
spark/utils/: auth.py  hashing.py  ids.py  net.py  paths.py  time.py
spark/web/: __init__.py  app.py  auth.py  credentials.py  events.py  middleware.py  schemas.py  wordlist.py
spark/web/api/: annotations.py  (+23 more)
tests/: conftest.py
tests/acceptance/: test_v1_acceptance.py
tests/integration/: test_engine_end_to_end.py  test_plugin_config_and_persona_api.py  test_sandbox_real.py  test_web_api.py  test_web_security.py
tests/unit/: test_backoff_and_simulate.py  test_bandit.py  test_budget_guard.py  test_calendar_plugin.py  test_chroma_hardening.py  test_cidr_middleware.py  test_classifiers.py  test_cloud_drive_plugin.py  test_config_loader.py  test_cost_tracker.py  test_credentials.py  test_daemon_templates.py  test_engine_graph.py  test_filtering.py  test_fingerprint.py  test_guardrails_fusion.py  test_guardrails_resolver.py  test_home_assistant_plugin.py  test_imap_reader_plugin.py  test_log_scrubber.py  test_net_ssrf.py  test_paths.py  test_persistence.py  test_persona_repo.py  test_playbook_store.py  test_plugin_config.py  test_plugin_metadata.py  test_propose_skill.py  test_redaction.py  test_remediation_catalogue.py  test_runtime_config.py  test_security_g1_g2_g3.py  test_security_hardening.py  test_sensitivity.py  test_shell_plugin.py  test_skill_catalog.py  test_slack_plugin.py  test_spans_and_logging.py  test_sqlite_plugin.py  test_task_schedule_validation.py  (+4 more)
wiki/: API-Reference.md  Command-Palette.md  Concepts-Bounded-Autonomy.md  Concepts-Budgets.md  Concepts-Learning.md  Concepts-Memory.md  Concepts-Permissions.md  Concepts-Personas.md  Concepts-Plugins.md  Concepts-Privacy.md  Concepts-Sandbox.md  Concepts-Skills.md  Configuration-Reference.md  Contributing.md  Cost-And-Budgets.md  Daemon-Modes.md  Data-Classification-Guardrails.md  Deployment-Guide.md  Error-Codes.md  FAQ.md  Failure-Inspector-Guide.md  Filtering-Page.md  First-Task.md  Forensic-Review-Guide.md  Getting-Started.md  Home.md  Installation.md  Logging-And-Tracing.md  Memory-Browser.md  Permissions-Guide.md  Persona-Manager-Guide.md  Plugin-Authoring.md  Plugin-Reference-CSV-IO.md  Plugin-Reference-Calendar.md  Plugin-Reference-Cloud-Drive.md  Plugin-Reference-Datetime.md  Plugin-Reference-Email-Sender.md  Plugin-Reference-Filesystem.md  Plugin-Reference-Git.md  Plugin-Reference-HTTP-Client.md  (+28 more)
(+158 files in other folders)
